# kubsd

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pages.yml
docs/superpowers/plans/: 2026-07-05-keel-agent-milestone1-env-and-spec.md  2026-07-05-keel-agent-milestone2-jail-zfs.md  2026-07-05-keel-agent-milestone3-net.md  2026-07-05-kubsd-agent-milestone1-env-and-spec.md  2026-07-05-kubsd-agent-milestone2-jail-zfs.md  2026-07-05-kubsd-agent-milestone3-net.md  2026-07-06-keel-agent-milestone4-reconciler.md  2026-07-06-kubsd-agent-milestone4-reconciler.md  (+16 more)
keel-agentd/: Cargo.toml
keel-agentd/rc.d/: keel_agentd
keel-agentd/src/: auth.rs  backoff.rs  capacity.rs  http.rs  ingress_record.rs  ingress_store.rs  lib.rs  main.rs  nginx.rs  pf.rs  podcidr.rs  proxy.rs  reconciler.rs  record.rs  registration.rs  replica_target.rs  replica_target_store.rs  replication.rs  replication_loop.rs  service_vips.rs  store.rs  tls.rs  wire.rs  worker.rs
keel-agentd/tests/: freebsd_nginx.rs
keel-controlplane/: Cargo.toml
keel-controlplane/src/: addresses.rs  auth.rs  http.rs  lib.rs  main.rs  pending_fences.rs  placements.rs  registry.rs  scheduler.rs  services.rs  standbys.rs  subnet.rs  tls.rs  wire.rs  worker.rs
keel-ingress/: Cargo.toml
keel-ingress/src/: acme.rs  config.rs  dns.rs  instant_acme_client.rs  lib.rs  ovh.rs
keel-jail/: Cargo.toml
keel-jail/src/: fake.rs  lib.rs  mount_cli.rs  mount_error.rs  mount_fake.rs  process.rs
keel-jail/tests/: freebsd_lifecycle.rs  freebsd_mount.rs
keel-net/: Cargo.toml
keel-net/src/: error.rs  fake.rs  lib.rs  process.rs
keel-net/tests/: freebsd_net.rs
keel-spec/: Cargo.toml
keel-spec/src/: error.rs  lib.rs  resources.rs  types.rs  validate.rs
keel-spec/tests/: parse_and_validate.rs
keel-zfs/: Cargo.toml
keel-zfs/src/: cli.rs  error.rs  fake.rs  lib.rs
keel-zfs/tests/: freebsd_zfs.rs
keelctl/: Cargo.toml
keelctl/src/: main.rs  tls.rs
keelctl/tests/: cli.rs
kubsd-agentd/: Cargo.toml
kubsd-agentd/src/: backoff.rs  lib.rs  reconciler.rs  record.rs  store.rs
kubsd-jail/: Cargo.toml
kubsd-jail/src/: error.rs  fake.rs  lib.rs  process.rs
kubsd-jail/tests/: freebsd_lifecycle.rs
kubsd-net/: Cargo.toml
kubsd-net/src/: fake.rs  lib.rs  process.rs
kubsd-net/tests/: freebsd_net.rs
kubsd-spec/: Cargo.toml
kubsd-spec/src/: error.rs  lib.rs  resources.rs  types.rs  validate.rs
kubsd-spec/tests/: parse_and_validate.rs
kubsd-zfs/: Cargo.toml
kubsd-zfs/src/: cli.rs  error.rs  fake.rs  lib.rs
kubsd-zfs/tests/: freebsd_zfs.rs
scripts/: gen-certs.sh  smoke-test.sh
site/: https-quickstart.html  index.html  journey.html  quickstart.html  why.html
site/assets/: style.css
site/docs/: api.html  architecture.html  cli.html  index.html  jailspec.html
testdata/tls/: ca.crt  ca.key  crl.pem  fixture-client.crt  fixture-client.key  fixture-node.crt  fixture-node.key  revoked-node.crt  revoked-node.key  wrong-ca-node.crt  wrong-ca-node.key
(+26 files in other folders)
