[package]
name = "keel-agentd"
version = "0.1.0"
edition = "2021"

[dependencies]
keel-spec = { path = "../keel-spec" }
keel-jail = { path = "../keel-jail" }
keel-zfs = { path = "../keel-zfs" }
keel-net = { path = "../keel-net" }
keel-controlplane = { path = "../keel-controlplane" }
keel-ingress = { path = "../keel-ingress" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"
httparse = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
ipnet = "2"
toml = "0.8"
